tests/snapshots/list_recipes__schema_valid_boundary_values.snap
---
source: tests/list_recipes.rs
expression: snapshot_content
---
Available recipes: boundary-recipe
$ nutriterm list-recipes
Available recipes:
  boundary-recipe
