tests/snapshots/list_recipes__unknown_ingredient.snap
---
source: tests/list_recipes.rs
expression: normalized_stderr
---
Error: Recipe 'test-recipe' references unknown ingredient 'nonexistent_ingredient'

Tip: Fix ingredient references in recipes.jsonc before running commands.
