tests/snapshots/list_recipes__unknown_ingredient_with_suggestion.snap
---
source: tests/list_recipes.rs
expression: normalized_stderr
---
Error: Recipe 'test-recipe' references unknown ingredient 'chiken_breast'.

Did you mean 'chicken_breast'?

Available ingredient IDs: chicken_breast

Tip: Fix ingredient references in recipes.jsonc before running commands.
